[gd_scene load_steps=14 format=2]

[ext_resource path="res://default_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://environment.tres" type="Environment" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/MainGame.gd" type="Script" id=4]
[ext_resource path="res://scenes/MenuOverlay.tscn" type="PackedScene" id=5]

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
params_blend_mode = 1
albedo_color = Color( 0.0352941, 0.0352941, 0.0352941, 1 )

[sub_resource type="PlaneMesh" id=4]
material = SubResource( 3 )
size = Vector2( 5, 5 )

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true
params_blend_mode = 3
albedo_color = Color( 0.443137, 0.784314, 1, 1 )

[sub_resource type="PlaneMesh" id=2]
material = SubResource( 5 )
size = Vector2( 5, 5 )

[sub_resource type="SpatialMaterial" id=8]
flags_unshaded = true
params_blend_mode = 3
albedo_color = Color( 0.443137, 1, 0.698039, 1 )

[sub_resource type="PlaneMesh" id=9]
material = SubResource( 8 )
size = Vector2( 5, 5 )

[sub_resource type="SpatialMaterial" id=6]
flags_unshaded = true
params_blend_mode = 3
albedo_color = Color( 1, 0.443137, 0.443137, 1 )

[sub_resource type="PlaneMesh" id=7]
material = SubResource( 6 )
size = Vector2( 5, 5 )

[node name="MainGame" type="Spatial"]
script = ExtResource( 4 )

[node name="LevelContainer" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.33091, 0.943662, 0, -0.943662, 0.33091, 0, 11.692, 5.84397 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.903869, -0.349476, 0.246754, -0.100109, 0.38799, 0.916211, -0.415932, -0.852837, 0.315706, 0, 6.35245, 8.22418 )
light_energy = 4.523
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 0, 6 )

[node name="Checkerboard" type="Spatial" parent="."]

[node name="CSGMesh3" type="CSGMesh" parent="Checkerboard"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0.1, 5 )
mesh = SubResource( 4 )

[node name="CSGMesh4" type="CSGMesh" parent="Checkerboard"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0.1, 0 )
mesh = SubResource( 4 )

[node name="CSGMesh5" type="CSGMesh" parent="Checkerboard"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 5 )
mesh = SubResource( 4 )

[node name="CSGMesh6" type="CSGMesh" parent="Checkerboard"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0.1, 0 )
mesh = SubResource( 4 )

[node name="CSGMesh7" type="CSGMesh" parent="Checkerboard"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0.1, 5 )
mesh = SubResource( 4 )

[node name="CSGMesh8" type="CSGMesh" parent="Checkerboard"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0.1, -5 )
mesh = SubResource( 4 )

[node name="CSGMesh9" type="CSGMesh" parent="Checkerboard"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, -5 )
mesh = SubResource( 4 )

[node name="CSGMesh10" type="CSGMesh" parent="Checkerboard"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0.1, -5 )
mesh = SubResource( 4 )

[node name="SelectionHighlights" type="Spatial" parent="."]

[node name="SelectionValid" type="CSGMesh" parent="SelectionHighlights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
mesh = SubResource( 2 )

[node name="SelectionApplying" type="CSGMesh" parent="SelectionHighlights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0.1, 0 )
mesh = SubResource( 9 )

[node name="SelectionInvalid" type="CSGMesh" parent="SelectionHighlights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 5 )
mesh = SubResource( 7 )

[node name="PlayerLabels" type="Spatial" parent="."]

[node name="Label3D" type="Label3D" parent="PlayerLabels"]
modulate = Color( 1, 0, 0, 1 )
text = "Player 1"
font = ExtResource( 1 )

[node name="MenuOverlay" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
